feat(backend): control de acceso por roles USER, ADMIN y AUDITOR con API de asignación y bitácora de auditoría, expiración de sesiones por inactividad, validación de campos y manejo de errores 401 y 403